--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,8 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
-    testCompile 'junit:junit:4.12'
+    compile 'com.android.support:design:25.3.1'
     compile 'com.android.volley:volley:1.0.0'
+    compile 'com.os.operando.garum:garum:0.9.0'
+    testCompile 'junit:junit:4.12'
 }
