--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="xyz.untan.mastodontest">
+    package="xyz.untan.mstdnp">
 
     <!-- <uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL"/> -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -15,7 +15,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".AuthActivity"
+            android:name="xyz.untan.mstdnp.AuthActivity"
             android:label="@string/title_activity_login">
 
             <intent-filter>
@@ -34,12 +34,12 @@
         </activity>
 
         <activity
-            android:name=".SettingsActivity"
+            android:name="xyz.untan.mstdnp.SettingsActivity"
             android:label="@string/title_activity_settings">
         </activity>
 
         <service
-            android:name=".MetadataService"
+            android:name="xyz.untan.mstdnp.MetadataService"
             android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
             <intent-filter>
                 <action android:name="android.service.notification.NotificationListenerService" />
