--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
 
         <activity
             android:name="xyz.untan.mstdnp.AuthActivity"
-            android:label="@string/title_activity_login">
+            android:label="@string/title_activity_main">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,8 +34,7 @@
         </activity>
 
         <activity
-            android:name="xyz.untan.mstdnp.SettingsActivity"
-            android:label="@string/title_activity_settings">
+            android:name="xyz.untan.mstdnp.SettingsActivity">
         </activity>
 
         <service
